plugins {
    id 'com.android.library'
    id 'org.jetbrains.kotlin.android'
    id 'org.jetbrains.kotlin.plugin.serialization' version '2.0.21'
}

def markwonForkVersion = "v4.6.2-mnnchat.1"

apply from: rootProject.file('third_party/mnn_android/apps/Android/MnnLlmChat/build_prebuilt.gradle')
apply from: rootProject.file('third_party/mnn_android/apps/Android/MnnLlmChat/downloadSherpaMnn.gradle')

repositories {
    google()
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

android {
    namespace 'com.alibaba.mnnllm.android'
    compileSdk 36
    ndkVersion "28.2.13676358"

    androidResources {
        noCompress += ['weight', 'part1', 'part2', 'part3', 'part4', 'part5', 'part6', 'part7', 'part8', 'part9', 'part10', 'mnn', 'bin', 'jar', 'mdl', 'msc', 'mv', 'txt', 'json', 'md']
    }

    defaultConfig {
        minSdk 29
        targetSdk 34
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "proguard-rules.pro"
        buildConfigField "boolean", "ENABLE_FIREBASE", "false"
        buildConfigField "boolean", "IS_GOOGLE_PLAY_BUILD", "false"

        externalNativeBuild {
            cmake {
                cppFlags '-std=c++17'
                arguments "-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON"
            }
        }

        ndk {
            abiFilters "arm64-v8a"
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    kotlinOptions {
        jvmTarget = "11"
    }

    externalNativeBuild {
        cmake {
            path file('src/main/cpp/CMakeLists.txt')
            version '3.22.1'
        }
    }

    buildFeatures {
        viewBinding true
        buildConfig true
    }

    sourceSets {
        main {
            res.srcDirs = ['src/main/res', 'src/main/res-icons']
        }
    }

    packaging {
        resources {
            excludes += [
                    'META-INF/INDEX.LIST',
                    'META-INF/io.netty.versions.properties',
                    'META-INF/DEPENDENCIES',
                    'META-INF/LICENSE',
                    'META-INF/MANIFEST.MF'
            ]
        }
        jniLibs {
            useLegacyPackaging = true
        }
    }

    testOptions {
        unitTests.includeAndroidResources = true
        unitTests.all {
            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
        }
    }

    lint {
        abortOnError false
    }
}

tasks.register("prepareMnnNativeLibs") {
    dependsOn(rootProject.tasks.named("prepareMnnAndroidNativeLibs"))
}

tasks.named("preBuild").configure {
    dependsOn("prepareMnnNativeLibs")
    dependsOn("downloadAndUnzipNativeLibs")
}

if (project.hasProperty('ADD_BUILTIN') && project.property('ADD_BUILTIN') == 'true') {
    tasks.named("preBuild").configure {
        dependsOn("downloadAndUnzipBuiltinModels")
        dependsOn("copyModelInfoToMarketConfig")
    }
}

dependencies {
    implementation project(':baselib')
    implementation project(':mnn_tts')
    implementation project(':model_downloader')

    implementation "org.jetbrains.kotlin:kotlin-stdlib:2.0.21"
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.activity:activity-ktx:1.9.3'
    implementation 'androidx.fragment:fragment-ktx:1.8.6'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
    implementation 'androidx.lifecycle:lifecycle-service:2.8.7'
    implementation 'androidx.slidingpanelayout:slidingpanelayout:1.2.0'
    implementation 'androidx.preference:preference-ktx:1.2.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
    implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
    implementation 'com.github.squti:Android-Wave-Recorder:2.0.1'
    implementation 'com.github.Juude.Markwon:core:' + markwonForkVersion
    implementation 'com.github.Juude.Markwon:ext-latex:' + markwonForkVersion
    implementation 'com.github.Juude.Markwon:ext-tables:' + markwonForkVersion
    implementation 'ru.noties:jlatexmath-android:0.2.0'
    implementation 'ru.noties:jlatexmath-android-font-cyrillic:0.2.0'
    implementation 'ru.noties:jlatexmath-android-font-greek:0.2.0'
    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'

    implementation "io.ktor:ktor-client-android:3.1.3"
    implementation "io.ktor:ktor-server-auth:3.1.3"
    implementation "io.ktor:ktor-server-call-logging:3.1.3"
    implementation "io.ktor:ktor-server-content-negotiation:3.1.3"
    implementation "io.ktor:ktor-server-cors:3.1.3"
    implementation "io.ktor:ktor-server-double-receive:3.1.3"
    implementation "io.ktor:ktor-server-netty:3.1.3"
    implementation "io.ktor:ktor-server-request-validation:3.1.3"
    implementation "io.ktor:ktor-server-sse:3.1.3"
    implementation "io.ktor:ktor-server-status-pages:3.1.3"
    implementation "io.ktor:ktor-serialization-kotlinx-json:3.1.3"
    implementation "io.ktor:ktor-utils:3.1.3"

    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2"
    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.1"
    implementation "androidx.datastore:datastore-preferences:1.1.1"
    implementation "com.jakewharton.timber:timber:5.0.1"
    implementation platform('com.google.firebase:firebase-bom:34.4.0')
    implementation 'com.google.firebase:firebase-analytics'
    implementation 'com.google.firebase:firebase-crashlytics'
    implementation 'com.google.firebase:firebase-crashlytics-ndk'
    implementation 'com.github.Juude:AndroidDeviceNames:0.0.1'

    debugImplementation 'com.facebook.stetho:stetho:1.6.0'
    debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'

    def cameraxVersion = "1.4.2"
    implementation "androidx.camera:camera-core:${cameraxVersion}"
    implementation "androidx.camera:camera-camera2:${cameraxVersion}"
    implementation "androidx.camera:camera-lifecycle:${cameraxVersion}"
    implementation "androidx.camera:camera-view:${cameraxVersion}"

    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.3.0'
    testImplementation 'androidx.test:core:1.5.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.robolectric:robolectric:4.15.1'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.2.0'
    testImplementation "io.mockk:mockk:1.13.10"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.2"
}
